# port-scanner

./: README.md  ports_scan.py
New folder/: zisWFcUi
New folder/tooldrift-project/: .gitignore  README.md  pyproject.toml  requirements.txt
New folder/tooldrift-project/.github/workflows/: tooldrift.yml
New folder/tooldrift-project/eval/: results.json  run_eval.py
New folder/tooldrift-project/tests/: test_diff.py  test_rules.py  test_semantic.py
New folder/tooldrift-project/tests/fixtures/: addremove_v1.json  addremove_v2.json  benign_v1.json  benign_v2.json  labels.json  reword_v1.json  reword_v2.json  rugpull_v1.json  rugpull_v2.json
New folder/tooldrift-project/tooldrift/: __init__.py  cli.py  diff.py  extractor.py  models.py  report.py  rules.py  semantic.py  snapshot.py
detectionforge/: README.md
files/: README.md
files/DetectionForge/detectionforge/: .env.example  .gitignore  requirements.txt
files/DetectionForge/detectionforge/eval/: eval_harness.py
files/DetectionForge/detectionforge/notebook/: detectionforge_capstone.ipynb
files/DetectionForge/detectionforge/specs/: detection_rules.feature
files/DetectionForge/detectionforge/src/: __init__.py  agent.py  memory.py  schemas.py
ro-portfolio/: PREVIEW.html  README.md  package.json
ro-portfolio/app/: globals.css  layout.js  page.js
ro-portfolio/components/: Nav.jsx  Reveal.jsx  Scanner.jsx
ro-portfolio/data/: blogs.json  certifications.json  education.json  experience.json  hobbies.json  labs.json  profile.json  projects.json
ro-portfolio/lib/: data.js
(+3 files in other folders)
